--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,19 @@ body {
 }
 
 header, footer {
-    min-height: 5vh;
+    height: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(236, 211, 93, 0.99);
-    font-size: 24px;
+    font-size: 36px;
+    text-align: center;
 }
 
 .wrapper {
     position: relative;
     width: 100vw;
-    min-height: 80vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
